# posttraining-data

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run.sh
01-hf-download/: hf-download.py
02-standardisation/: browse-sample.py  cleaner-agent.py  convert-africa-sft.py  convert-apigen-function-calling.py  convert-deepmath.py  convert-fetaqa.py  convert-glaive-function-calling-v2.py  convert-gsm8k.py  convert-harp.py  convert-leetcode.py  convert-lexam-mcq.py  convert-lexam-open.py  convert-medical-o1.py  convert-nemotron-if.py  convert-numinamath.py  convert-opencodereasoning-cpp.py  convert-opencodereasoning-python.py  convert-riddle-sense.py  convert-standard-format.py  convert-swiss-german-dialects.py  convert-table-gpt.py  convert-wikiqa.py  filter-ifbench.py  filter-languages.py  generate-ifbench.py  issues-agent.py
04-decontamination/: gather-decontamination-prompts-cli.py  gather-decontamination-prompts.py  submit-parallel-decontamination.sh
07-dataset-aggregation/: concatenate-datasets.py
08b-judge-evaluation/: README.md
09-filter-for-ref-model/: filter_dataset_for_ref_model_swissaiformat.py
leetcode_fix/: 1185.txt  1539.txt  1552.txt  1616.txt  166.txt  1749.txt  1874.txt  1896.txt  190.txt  191.txt  2014.txt  2059.txt  2380.txt  2683.txt  2719.txt  2943.txt  2979.txt  3222.txt  3258.txt  326.txt  3326.txt  3404.txt  3503.txt  501.txt  581.txt  625.txt  768.txt
legacy/: requirements.txt
preference_acquisition/: calculate_average_tokens_for_completions.py  generate_deltaqwen.py  generate_maxmin.py
preprocessing/: run.py  (+4 more)
(+61 files in other folders)
